@@ -3,9 +3,10 @@
 use v6;
 use Test;
 
-plan 4;
+plan 5;
 
-use_ok('Test::Builder');
-use_ok('Test::Builder::Test');
-use_ok('Test::Builder::TestPlan');
-use_ok('Test::Builder::Output');
+use_ok( 'Test::Builder' );
+use_ok( 'Test::Builder::Test' );
+use_ok( 'Test::Builder::TestPlan' );
+use_ok( 'Test::Builder::Output' );
+use_ok( 'Test::Builder::Tester' );
